bug: z-index on demo credentials card

--- a/apps/gauzy/src/app/auth/login/login.component.scss
+++ b/apps/gauzy/src/app/auth/login/login.component.scss
@@ -14,6 +14,7 @@ nb-accordion-item-header{
 	top: 0px;
 	right: -30px;
 	width: 231px;
+  z-index: 1;
 }
 
 .demo-credentials-head-text{
